crates/sourcepawn_lsp/tests/text_document/hover/snapshots/main__text_document__hover__macros__macro_11.snap
---
source: crates/sourcepawn_lsp/tests/text_document/hover/macros.rs
assertion_line: 148
expression: "hover(r#\"\n%! main.sp\n#define MAXPLAYERS      101  /**< Maximum number of players SourceMod supports */\nint foo = MAXPLAYERS;\n              |\n              ^\n\"#)"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```sourcepawn\n#define MAXPLAYERS      101  \n```\nExpands to:\n```sourcepawn\n101\n```\n\n---\n\nMaximum number of players SourceMod supports"
  },
  "range": {
    "start": {
      "line": 1,
      "character": 10
    },
    "end": {
      "line": 1,
      "character": 20
    }
  },
  "actions": []
}
