crates/sourcepawn_lsp/tests/text_document/hover/snapshots/main__text_document__hover__macros__macro_8.snap
---
source: crates/sourcepawn_lsp/tests/text_document/hover/macros.rs
assertion_line: 105
expression: "hover(r#\"\n%! main.sp\nenum Bar {Bar1}\n#define FOO(%0,%1) view_as<%0>( %1 )\n#define BAR(%0)                     FOO( Bar, %0 )\nBar bar = BAR( 1 );\n           |\n           ^\n\"#)"
---
{
  "contents": {
    "kind": "markdown",
    "value": "```sourcepawn\n#define BAR(%0)                     FOO( Bar, %0 )\n```\nExpands to:\n```sourcepawn\nview_as<Bar>( 1 )\n```"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 10
    },
    "end": {
      "line": 3,
      "character": 13
    }
  },
  "actions": []
}
